♻️ Adjust Playwright options for release configuration.

--- a/.github/workflows/live-tests.yml
+++ b/.github/workflows/live-tests.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore --configuration Release
     - name: Install Playwright
-      run: pwsh bin/Release/net6.0/playwright.ps1 install --with-deps
+      run: pwsh bin/Release/net6.0/playwright.ps1 install
     - name: Test
       run: dotnet test --configuration Release
       env:
