--- a/src/WebUI/ClientApp/package.json
+++ b/src/WebUI/ClientApp/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-server": "~13.3.10",
     "@angular/router": "~13.3.10",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "jquery": "^3.6.0",
+    "ngx-bootstrap": "^8.0.0",
     "oidc-client": "^1.11.5",
     "popper.js": "^1.16.0",
     "run-script-os": "^1.1.6",
