🚀 New package deploy.

--- a/CleanArchitecture.nuspec
+++ b/CleanArchitecture.nuspec
@@ -3,7 +3,7 @@
   <metadata>
 
     <id>Clean.Architecture.Solution.Template</id>
-    <version>6.0.8</version>
+    <version>6.1.0</version>
     <title>Clean Architecture Solution Template</title>
     <authors>JasonTaylorDev</authors>
     <description>Clean Architecture Solution Template for and .NET 6.</description>
@@ -11,7 +11,7 @@
       This is a solution template for creating a Single Page App (SPA) with ASP.NET Core 6 and Angular 13 following the principles of Clean Architecture.
     </summary>
     <releaseNotes>
-      Upgrade to the latest version of Angular and RxJS.
+      Recreated the Todo page demo that was broken in the Angular 13 upgrade.
     </releaseNotes>
 
     <projectUrl>https://github.com/JasonTaylorDev/CleanArchitecture</projectUrl>
