👷Clean-up workflows
dotnet-build - build and test for pull requests.
dotnet-deploy - build, test, and deploy for any changes to main
live-tests - run acceptance tests after new deploy
package - deploy new template to NuGet

--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -1,9 +1,6 @@
-name: .NET
+name: Build & Deploy
 on:
-  workflow_dispatch:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
 
 env:
